# high-risk-service-account-policy

./: Cargo.toml  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  metadata.yml  session.yaml
.github/workflows/: release.yml  test.yml
src/: lib.rs  settings.rs
test_data/: can_i_default_service_account_returns_allowed.yml  can_i_returns_allowed.yml  can_i_returns_not_allowed.yml  pod_creation.json  pod_creation_without_service_account.json  pod_creation_without_service_account_mounted.json  session_return_error.yml  session_return_false.yml  session_return_true.yml  session_return_true_default_service_account.yml  settings.json
