[package]
name = "high-risk-service-account-policy"
version = "0.1.0"
authors = ["José Guilherme Vanz <jvanz@jvanz.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.25.0", default-features = false, features = [
  "v1_31",
] }
kubewarden-policy-sdk = "0.14.0"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
